--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,7 @@ body {
   line-height: 1;
 }
 
-textarea{
+textarea {
   background: transparent;
   border: none;
   resize: none;
@@ -21,11 +21,11 @@ textarea{
   border-bottom: 10px solid black;
 }
 
-.description{
+.description {
   white-space: pre-wrap;
 }
 
-.time-block{
+.time-block {
   text-align: center;
   border-radius: 15px;
   padding-bottom: 10px;
@@ -34,31 +34,37 @@ textarea{
 .row {
   white-space: pre-wrap;
   height: 80px;
-  border-top: 1px solid white;;
+  border-top: 1px solid white;
+  ;
 }
 
 .hour {
   background-color: #ffffff;
   color: #000000;
-  height: 79px; /*put time box same height as text entry box*/
+  height: 79px;
+  /*put time box same height as text entry box*/
   font-weight: bold;
-  border-top-left-radius: 15px; /*time buttons symmetrical to save buttons*/
-  border-bottom-left-radius: 15px; /*time buttons symmetrical to save buttons*/
+  border-top-left-radius: 15px;
+  /*time buttons symmetrical to save buttons*/
+  border-bottom-left-radius: 15px;
+  /*time buttons symmetrical to save buttons*/
 }
 
 .past {
   background-color: #d3d3d3;
-  color: white;
+  color: black;
 }
 
 .present {
   background-color: #ff6961;
-  color: white;
+  color: black;
+  font-weight: bold;
 }
 
 .future {
-  background-color: #77dd77;
-  color: white;
+  background-color: #09b309;
+  color: black;
+  font-weight: bold;
 }
 
 .saveBtn {
@@ -66,8 +72,9 @@ textarea{
   border-top-right-radius: 15px;
   border-bottom-right-radius: 15px;
   background-color: #06AED5;
-  color: white;
-  padding: 20px 40px; /*made save buttons more resemble mock up*/
+  color: black;
+  padding: 20px 40px;
+  /*made save buttons more resemble mock up*/
 }
 
 .saveBtn i:hover {
