made time buttons same color and save buttongs in stylesheet

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,7 +39,7 @@ textarea {
 }
 
 .hour {
-  background-color: #ffffff;
+  background-color: #06AED5;
   color: #000000;
   height: 79px;
   /*put time box same height as text entry box*/
