added border around hour box to more match save button look

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,6 +41,7 @@ textarea {
 .hour {
   background-color: #06AED5;
   color: #000000;
+  border: 1px solid black;
   height: 79px;
   /*put time box same height as text entry box*/
   font-weight: bold;
